--- a/404.md
+++ b/404.md
@@ -11,7 +11,7 @@ style="background-image: url('')">
       <div class="column text">
         <h1><span class="light"><strong>404<br>Page not found</strong></span></h1>
         <p>お探しのページは見つかりませんでした。</p>
-        <a class="button primary inverted" href="/index.html">Go to the homepage</a>
+        <a class="button primary inverted" href="/index.html">トップページへ戻る</a>
         
       </div>
       <div class="column media">
