--- a/404.md
+++ b/404.md
@@ -5,7 +5,7 @@ title: Page not found
 ---
 <section class="block block-hero-2"
 
-style="background-image: url('')"> <div class="container"> <div class="columns"> <div class="column text"> <h1><span class="light"><strong>404<br>Page not found</strong></span></h1> <p>お探しのページは見つかりませんでした。</p> <a class="button primary inverted" href="/">トップページへ戻る</a>
+style="background-image: url('')"> <div class="container"> <div class="columns"> <div class="column text"> <h1><span class="light"><strong>404<br>Not Found</strong></span></h1> <p>お探しのページは見つかりませんでした。</p> <a class="button primary inverted" href="/">トップページへ戻る</a>
 
       </div>
       <div class="column media">
